--- a/demo_tfa.ipynb
+++ b/demo_tfa.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "cell_execution_strategy": "setup",
-      "authorship_tag": "ABX9TyPpU+ZJhc+1+sJkzG+EMBZY",
+      "authorship_tag": "ABX9TyMg9nUedGAT9A47nidrk7ov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,12 +56,12 @@
         "\n",
         "- Para valores muy grandes de $R$, el primer término siempre va a terminar dominando ya que\n",
         "\n",
-        "$$\\lim_{z \\in \\mathbf{C}_R\\\\R \\to \\infty}\n",
+        "$$\\lim_{z \\in \\mathbf{C}_R \\\\ R \\to \\infty}\n",
         "\\dfrac{|a_{n-1} z^{n-1} + \\ldots + a_0|}{|z^n|} = $$\n",
         "\n",
         "$$\\lim_{ \\substack{  z \\in \\mathbf{C}_R \\\\ R \\to \\infty}} |a_{n-1} z^{-1} + \\ldots + a_0z^{-n}| = 0 $$\n",
         "\n",
-        "- Entonces para valores muy grandes de $R$ y tomando $$z = R \\left( \\cos(\\theta) + i \\sin(theta) \\right) $$ $\\mathbf{D}_R$ se aproximará como\n",
+        "- Entonces para valores muy grandes de $R$ y tomando $$z = R \\left( \\cos(\\theta) + i \\sin(\\theta) \\right) $$ $\\mathbf{D}_R$ se aproximará como\n",
         "\n",
         "$$\\mathbf{\\tilde{D}}_R =  a_n R^n\\left( \\cos( n \\theta) + i \\sin(n\\theta) \\right)$$\n",
         "\n",
