--- a/demo_tfa.ipynb
+++ b/demo_tfa.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "cell_execution_strategy": "setup",
-      "authorship_tag": "ABX9TyMg9nUedGAT9A47nidrk7ov",
+      "authorship_tag": "ABX9TyOV4efpSeoVppmJ91ZgQzFS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,7 @@
         "5. Observe la curva violeta. ¿Encierra al origen?\n",
         "6. Variando R, ¿Puede hacer que la curva violeta pase por el origen?\n",
         "\n",
-        "Si lo logró: ¡Felicitiaciones, usted encontró una raíz de P!\n",
+        "Si lo logró: ¡Felicitaciones, usted encontró una raíz de P!\n",
         "\"\"\""
       ],
       "metadata": {
