--- a/demo_tfa.ipynb
+++ b/demo_tfa.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "cell_execution_strategy": "setup",
-      "authorship_tag": "ABX9TyOV4efpSeoVppmJ91ZgQzFS",
+      "authorship_tag": "ABX9TyMPtGTM3aB0TYuCxiwHVGJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,6 +101,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title texto de explicación para mostrar en gradio\n",
         "explicación = \"\"\"\n",
         "\n",
         "### \"Todo polinomio tiene al menos una raíz en el plano complejo.\"\n",
@@ -133,7 +134,8 @@
         "\"\"\""
       ],
       "metadata": {
-        "id": "p5lsBOaCUXWY"
+        "id": "p5lsBOaCUXWY",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
